--- a/.github/workflows/fetch_nse.yml
+++ b/.github/workflows/fetch_nse.yml
@@ -1,19 +1,31 @@
-
 name: Fetch NSE Data Daily
+
 on:
   schedule:
-    - cron: "30 13 * * 1-5"
+    - cron: "30 13 * * 1-5"   # 7:00 PM IST
   workflow_dispatch:
+
 jobs:
   fetch:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with: {python-version: "3.10"}
-      - run: pip install pandas requests
-      - run: python scripts/fetch_nse.py
-      - run: |
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: pip install pandas requests
+
+      - name: Fetch NSE data
+        run: python scripts/fetch_nse.py
+
+      - name: Commit CSV
+        run: |
           git config user.name "nse-bot"
           git config user.email "nse-bot@users.noreply.github.com"
           git add data/latest.csv
