--- a/.github/workflows/fetch_nse.yml
+++ b/.github/workflows/fetch_nse.yml
@@ -1,8 +1,8 @@
-name: Fetch NSE Data Daily
+name: Fetch NSE Bhavcopy
 
 on:
   schedule:
-    - cron: "30 13 * * 1-5"   # 7:00 PM IST
+    - cron: "0 13 * * 1-5"   # 6:30 PM IST
   workflow_dispatch:
 
 jobs:
@@ -10,24 +10,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.11"
 
       - name: Install dependencies
         run: pip install pandas requests
 
-      - name: Fetch NSE data
+      - name: Run NSE fetch script
         run: python scripts/fetch_nse.py
 
-      - name: Commit CSV
+      - name: Commit updated data
         run: |
           git config user.name "nse-bot"
           git config user.email "nse-bot@users.noreply.github.com"
-          git add data/latest.csv
-          git commit -m "Daily NSE data update" || echo "No changes"
+          git add data/
+          git commit -m "Daily NSE bhavcopy update" || echo "No changes"
           git push
