--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,24 +1,46 @@
-
-name: Yahoo Update
+name: Update Stock Data (Yahoo)
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:        # manual run
   schedule:
-    - cron: "30 12 * * 1-5"
+    - cron: "30 12 * * 1-5"  # weekdays (IST market close approx)
 
 jobs:
   update:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      # 1️⃣ Checkout repository
+      - name: Checkout repo
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: true
+
+      # 2️⃣ Setup Python
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - run: pip install pandas yfinance
-      - run: python scripts/yahoo_fetch.py
-      - run: |
+
+      # 3️⃣ Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pandas yfinance
+
+      # 4️⃣ ✅ SAFETY STEP (IMPORTANT)
+      - name: Create data directory
+        run: mkdir -p data
+
+      # 5️⃣ Run Yahoo fetch script
+      - name: Run Yahoo fetch script
+        run: python scripts/yahoo_fetch.py
+
+      # 6️⃣ Commit & push if data changed
+      - name: Commit updated data
+        run: |
           git config user.name "yahoo-bot"
           git config user.email "yahoo-bot@users.noreply.github.com"
-          git add data/prices.csv
-          git commit -m "Daily Yahoo data update" || echo "No changes"
+          git add data/*.csv
+          git diff --cached --quiet || git commit -m "Auto-update Yahoo stock data"
           git push
