--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -1,46 +1,38 @@
 name: Update Stock Data (Yahoo)
 
 on:
-  workflow_dispatch:        # manual run
+  workflow_dispatch:
   schedule:
-    - cron: "30 12 * * 1-5"  # weekdays (IST market close approx)
+    - cron: "30 18 * * 1-5"   # Mon–Fri after market
 
 jobs:
   update:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repository
       - name: Checkout repo
         uses: actions/checkout@v4
-        with:
-          persist-credentials: true
 
-      # 2️⃣ Setup Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # 3️⃣ Install dependencies
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pandas yfinance
+          pip install --upgrade pip
+          pip install -r requirements.txt
 
-      # 4️⃣ ✅ SAFETY STEP (IMPORTANT)
       - name: Create data directory
         run: mkdir -p data
 
-      # 5️⃣ Run Yahoo fetch script
       - name: Run Yahoo fetch script
         run: python scripts/yahoo_fetch.py
 
-      # 6️⃣ Commit & push if data changed
       - name: Commit updated data
         run: |
           git config user.name "yahoo-bot"
-          git config user.email "yahoo-bot@users.noreply.github.com"
-          git add data/*.csv
-          git diff --cached --quiet || git commit -m "Auto-update Yahoo stock data"
+          git config user.email "actions@github.com"
+          git add data/prices.csv
+          git commit -m "Update stock prices (Yahoo)" || echo "No changes"
           git push
